Activity hub v2 - add goal tracking activities to hub allowing to manually add activities with presets. Compare figures in previous months and monitor the  average monthly percentage for each tag with target preset. Enable/disable tags in Activity hub and ability to select target frequency, value, start/end day of week and option to either track by hours or using custom preset. Render list of added acitivites with ability to delete. CSS responsive fixes. Fix bugs with dapper query logging, date filter, mvc routing and avatar source url

--- a/Appology.MVC/Appology.MVC.csproj
+++ b/Appology.MVC/Appology.MVC.csproj
@@ -1093,6 +1093,7 @@
     <Content Include="Views\Account\Settings.cshtml" />
     <Content Include="Views\Shared\_TableDetail.cshtml" />
     <Content Include="Views\Shared\_UserAvatar.cshtml" />
+    <Content Include="Views\Shared\_MenuHeader.cshtml" />
     <None Include="Web.Stage.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
