--- a/.gitignore
+++ b/.gitignore
@@ -259,5 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/MyCalendar.MVC/Logs/*
-/MyCalendar.MVC/Scripts/dist/*
+/Appology.MVC/Logs/*
+/Appology.MVC/Scripts/dist/*
+/Appology.MVC/libman.json
